
2004/01/26: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added a note about CVS usability to STYLE file


2004/01/25: Ronny Buchmann <ronny-hbci@vlugnet.org>
---------------------------------------------------
- remove autogenerated files


2004/01/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added new base module: GWEN_RingBuffer; this module introduces a
  circular read/write buffer.
- started cleaning up function names
- added statistical functions to GWEN_RingBuffer


2004/01/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- msgengine: added properties "readbin" and "writebin" to <ELEM> tags.
  If "type" is "bin" then these properties are checked (default to "1").
  If "0" then the binary data will not be parsed (this is needed to fix a
  problem in OpenHBCI with banks, which send partial SWIFT MT942 which
  have to be combined AFTER receiving all parts. So this parsing clearly can
  not be done from within the message engine)


===========================================================================
MARK: released gwenhywfar-0.9.5 (2004/01/21)
===========================================================================


2004/01/21: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- applied a build patch submitted by Ronny Buchmann
- fixed a severe bug in signature code
- changed version string determination:
  if TAG is "cvs" then the full version string (including major, minor,
  patchlevel, build and tag) are used.
  Otherwise all traling "0" in a version number are removed.


2004/01/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed windoze macros
- worked on SSL code
- MsgEngine: 
  - added a getCharValue callback to retrieve <VALUE>s with leading '?'
  - added checkType callback which lets inheritors return the base type